# carver

./: .gitignore  notes.txt  pyproject.toml  systematic_trading_presentation_DB_ready.pptx
scripts/: build_panel.py  check_alpha.py  inspect_panel.py  test_portfolio.py  test_strategy.py
src/config/: base.py  universe.py
src/futures_trend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lib/: __init__.py  adjust.py  filters.py  loaders.py
src/lib/backtester/: backtester.py
src/lib/indicators/: trending_indicator.py
src/lib/strat/: buy_n_hold.py  portfolio_risk_scaled_strategy.py  risk_scaled_strategy.py  strategy_base.py  variable_risk_scaled_strategy.py
